--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/frontend/styling/login_style.css">
+    <link rel="stylesheet" href="/styling/login_style.css">
     <title>CarBuy.Com</title>
 </head>
 <body>
     <header>
         <nav>
             <div id="logo">
-                <a href="/frontend/pages/index.html">CarBuy.com</a>
+                <a href="/index.html">CarBuy.com</a>
             </div>
             <div id="righthand">
                 <div class="navlink">
-                    <a href="/frontend/pages/index.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </div>
                 <div class="navlink">
-                    <a href="/frontend/pages/contact.html">Contact Us</a>
+                    <a href="/pages/contact.html">Contact Us</a>
                 </div>
                 <div class="navlink">
-                    <a href="/frontend/pages/signup.html">SignUp</a>
+                    <a href="/pages/signup.html">SignUp</a>
                 </div>
             </div>
         </nav>
@@ -45,7 +45,7 @@
     <section>
         <div id="more_in">
             <div id="content">
-                Don't have an account ? <a href="/frontend/pages/signup.html"><u>Sign Up</u></a>
+                Don't have an account ? <a href="/pages/signup.html"><u>Sign Up</u></a>
             </div>
         </div>
     </section>
