--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/frontend/styling/signup_style.css">
+    <link rel="stylesheet" href="/styling/signup_style.css">
     <title>CarBuy.Com</title>
 </head>
 <body>
     <header>
         <nav>
             <div id="logo">
-                <a href="/frontend/pages/index.html">CarBuy.com</a>
+                <a href="/index.html">CarBuy.com</a>
             </div>
             <div id="righthand">
                 <div class="navlink">
-                    <a href="/frontend/pages/index.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </div>
                 <div class="navlink">
-                    <a href="/frontend/pages/contact.html">Contact Us</a>
+                    <a href="/pages/contact.html">Contact Us</a>
                 </div>
                 <div class="navlink">
-                    <a href="/frontend/pages/login.html">Login</a>
+                    <a href="/pages/login.html">Login</a>
                 </div>
             </div>
         </nav>
@@ -65,7 +65,7 @@
         </div>
         <div id="more_info">
             <div id="login">
-                Already have an account ? <a href="/frontend/pages/login.html"><u>Log In</u></a>
+                Already have an account ? <a href="/pages/login.html"><u>Log In</u></a>
             </div>
         </div>
     </section>
