--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -69,6 +69,6 @@
             </div>
         </div>
     </section>
-    <script src="/frontend/scripting/signup.js"></script>
+    <script src="/scripting/signup.js"></script>
 </body>
 </html>
